fix: make mute audio button clickable on home screen on mobile devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -594,6 +594,8 @@ body {
     top: 1rem;
     right: 1rem;
     cursor: pointer;
+
+    z-index: 100;
 }
 
 /* Responsive */
